--- a/权限管理.md
+++ b/权限管理.md
@@ -11,13 +11,13 @@
 
 1. 和普通权限管理有区别的地方在于：权限是在公司层级上进行的分配。
 2. 上级公司的权限可以在下级公司中被继承。
-3. 当上级公司用户查看下级公司具体资源时，优先使用上级公司角色，然后根据需求取得此用户在下级公司的角色权限进行并/差集合（如果在下级公司有配置权限）。
+3. 当上级公司用户查看下级公司具体数据时，优先使用上级公司角色，然后根据需求取得此用户在下级公司的角色权限进行并/差集合（如果在下级公司有配置权限）。
 4. 在有特别需求的情况下可以建立临时权限，即对于某公司的某个资源针对某个用户/角色/任何人可以进行建立Get/Delete/Post/Put临时权限进行授权。
 	- 资源可以是单个资源，也可以为某个资源集合。
 	- 临时授权可以设置时间段，也可以成为长期授权（时间段为长期/无限制）。
 
- 优点：操作简单，容易操作，结构清晰。
- 缺点：对于权限控制的颗粒较粗，如遇见特殊情况可能会建立过多的临时权限，但临时权限有可能造成安全性减低。对于层级过多时操作不便。
+ * 优点：操作简单，容易操作，结构清晰。
+ * 缺点：对于权限控制的颗粒较粗，如遇见特殊情况可能会让用户自主建立过多的临时权限，但临时权限有可能造成安全性减低。对于层级过多时操作不便。
 
 ## 针对资源
 
@@ -31,7 +31,7 @@
 6. 当用户访问资源/资源集合时，根据所属用户/角色，取出对应的权限进行判断是有权操作。
 	- 具体场景：当用户访问/修改某个公司具体设备（资源）时，查询此资源对应的角色/用户是否和此用户（的角色）所拥有的权限匹配。
 
-7. 同时可参考针对方法的临时权限管理进行特殊情况定制。
+7. 同时可参考针对方法4的临时权限管理进行特殊情况定制。
 
-优点：对于资源可以进行精细化管理。
-缺点：需要对资源进行大量管理操作，同时会出现大量的角色，维护复杂度较高。
+* 优点：对于资源可以进行精细化管理。
+* 缺点：需要对资源进行大量管理操作，同时会出现大量的角色，维护复杂度较高。
